@@ -61,4 +61,12 @@
            tal:attributes="href string:${view/url}?pagenumber=${batch/lastpage}&amp;sort_on=${sort_on}"
            tal:content="batch/lastpage">3457</a>
     </span>
+
+    <!-- dynamic batching -->
+    <form tal:condition="view/dynamic_batchsize_enabled" id="dynamic_batching_form"
+          i18n:domain="ftw.tabbedview">
+      <span i18n:translate="">Lines per page:</span>
+      <input id="tabbedview-batchbox" name="tabbedview-batchbox"
+             tal:attributes="value batch/pagesize" />
+    </form>
 </div>
