@@ -1,3 +1,12 @@
+#dynamic_batching_form {
+  display: inline;
+  margin-left: 1em;
+}
+
+#tabbedview-batchbox {
+  width: 3em;
+}
+
 #content .tabbedview-tab-menu {
   float: right;
 }
