@@ -5,6 +5,9 @@ Changelog
 3.3.3 (unreleased)
 ------------------
 
+- Add default dynamic batching form to batching template. #11
+  [jone]
+
 - Fix javascript order in ExtJS profile.
   [jone]
 
